--- a/app/src/main/res/layout/activity_detalle_pelicula.xml
+++ b/app/src/main/res/layout/activity_detalle_pelicula.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
@@ -41,6 +41,29 @@
             android:text="aqui la descripcion de la pelicula"
             android:textColor="@color/yellow"
             android:gravity="center"
+            />
+        
+        <Button
+            android:id="@+id/buyTickets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:paddingHorizontal="@dimen/paddingButton"
+            android:text="BUY MY TICKETS!"
+            />
+
+        <TextView
+            android:id="@+id/seatLeft"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingHorizontal="30dp"
+            android:text="0"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            android:textColor="@color/yellow"
             />
 
     </LinearLayout>
